Addressed the issue that when putting error messages during contact validation, vertical space is not enough for the message container. This was introduced when trying to fix the halfcolumn shifting issue on Firefox for the country select list. Limit height was used for halfcolumn. Now introducing a class "countryList" to only limit the country select list. See cmn 100 of issue 878.

--- a/gbif-ipt/src/main/webapp/styles/main.css
+++ b/gbif-ipt/src/main/webapp/styles/main.css
@@ -517,11 +517,7 @@ div.halfcolumn {
 	margin: 0px 0px 0px 0px;
 	width: 49%;
 }
-
-div.basicMetadata div.halfcolumn {
-  height: 3.5em;
-}
-div.associateParties div.halfcolumn {
+.countryList {
   height: 3.5em;
 }
 div.halfcolumn a[id*='copyDetails-'] {
